--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
         </div>
       </main>
     </div>
-    <script src="./src/App.js" type="module"></script>
+    <script src="./src/app.js" type="module"></script>
   </body>
 </html>
